<resources>
    <string name="signIn">Already Register..?</string>
    <string name="app_name">QUICKAID</string>
    <string name="full_name">Full Name</string>
    <string name="email">Example@somthing.com</string>
    <string name="password">password</string>
    <string name="phone">+8801800000000</string>
    <string name="register">Register</string>
    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">phone required</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="input_error_email_invalid">enter a valid email</string>
    <string name="forgot_password">Just need your registered Email Id to sent you password rest instruction</string>
    <string name="hint_email">Enter Email Address</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">back</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="prompt_password">old password</string>
    <string name="new_pass">New password</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="details">If you are already register.then Login here.....!</string>
    <string name="title">Quick Aid</string>

</resources>
