<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/red_gradient"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <TextView
        android:textAllCaps="true"
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textColor="#fff"
        android:textSize="26sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/but_background"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_name"
                    android:gravity="center"
                    android:background="@drawable/edit_round"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/user"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:hint="@string/full_name"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_email"
                    android:background="@drawable/edit_round"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_email"
                    android:padding="10dp"
                    android:gravity="center"
                    android:singleLine="true"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_phone"
                    android:digits="0123456789"
                    android:background="@drawable/edit_round"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/phone"
                    android:padding="10dp"
                    android:gravity="center"
                    android:singleLine="true"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:maxLength="11" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:singleLine="true"
                    android:padding="10dp"
                    android:background="@drawable/edit_round"
                    android:drawableRight="@drawable/ic_lock_outline_black_24dp"
                    android:gravity="center"
                    android:hint="Password"
                    android:inputType="numberPassword" />
            </android.support.design.widget.TextInputLayout>





        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:background="@drawable/button_round_registration"
                android:text="SignUp"
                android:id="@+id/button_register"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />


            <Button

                android:id="@+id/button_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@null"
                android:text="If already signUp.Please click here..."

                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/login_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/user_profile_image_background"
        android:elevation="4dp"
        android:src="@drawable/heart" />
</RelativeLayout>